2010-8-18 ver 1.0.4 : Takuya Murakami <tmurakam at tmurakam.org>
	* support "-r" option for gcc

2010-7-16 Takuya Murakami
	* add -I flags
	* support cpp

2009-7-13 ver 1.0.3 : Takuya Murakami <tmurakam at tmurakam.org>
	* add -fpic options for compiler flags.
	  This seems to be needed for dynamic linked program.
	* add some other options.
	
2009-07-08 ver 1.0.2 : Takuya Murakami <tmurakam at tmurakam.org>
	* bug fix: -c, -S option handling.
	* add -Wl,--warn-unresolved-symbols option for shared library,
	  to compile shared library/modules with unresolved symbols.
	
2009-06-26 ver 1.0.1 : Takuya Murakami <tmurakam at tmurakam.org>
	* bug fix: g++ did not work

2009-06-25 ver 1.0.0 : Takuya Murakami <tmurakam at tmurakam.org>
	* Initial revision